# ServerOrchestration

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DataShigaToyoChiba12-05.xlsx  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
deploy/: docker-compose.yaml
src/: main.py  scheduler.py  socket.py  worker.py  worker_signals.py
src/alembic/: env.py
src/alembic/versions/: 288f3bc59628_log_table.py  3e57a3c75be6_database.py  53cf62e59e46_init_schema.py  5b588fa4411f_init_db.py  606cec45035e_init_db.py  9368a1d37507_init_db.py
src/api/common/: response.py
src/api/middleware/: __init__.py  global_exception.py
src/api/router/: __init__.py  log.py  robot.py  run.py  schedule.py  type.py
src/core/: config.py  redis.py  type.py
src/model/: __init__.py  base.py  runs.py  schedule.py
src/robot/: __init__.py
src/robot/DrawingClassic/: tasks.py
src/robot/DrawingClassic/automation/: __init__.py  andpad.py  share_point.py  web_access.py
src/robot/FuriwakeOsaka/: tasks.py
src/robot/GuiBanVeToei/: tasks.py
src/robot/GuiMailNoukiKakunin/: tasks.py
src/robot/Kaneka/: tasks.py
src/robot/Kaneka/common/: decorator.py
src/robot/KyushuOsaka/: tasks.py
src/robot/NgoaiHanwa/: tasks.py
src/robot/OHDMITSUMORI/: Data.xlsx  OHD図面送付結果.xlsx  tasks.py
src/robot/SeikyuNgoaiHanwa/: tasks.py
src/robot/SeikyuOnline/: tasks.py
src/robot/ShigaToyoChiba/: tasks.py
src/robot/TamaNouhinsumi/: tasks.py
src/robot/Tochigi/: tasks.py
src/schema/: run.py
src/service/: __init__.py  result.py  run.py  schedule.py
(+26 files in other folders)
